--- a/index.html
+++ b/index.html
@@ -74,8 +74,6 @@
 
                 <h2 class="visually-hidden">Переваги</h2>
 
-
-
                 <ul class="benefits-list list">
                     <li class="benefits-item">
                         <div class="benefits-icon-box">
@@ -447,8 +445,9 @@
                         <use></use>
                     </svg>
                     <input class="input-checbox" type="checkbox" name="agree" value="agree">
-                    <p class="checkbox-text">Погоджуюся з розсилкою та приймаю<a class="checkbox-link" href="">Умови
-                            договору</a></p>
+                    <p class="checkbox-text">Погоджуюся з розсилкою та приймаю
+                        <a class="checkbox-link" href="">Умови договору</a>
+                    </p>
                 </label>
 
                 <button class="backdrop-button" type="submit">Відправити</button>
